--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "mssql": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "type": "module"
 }
