--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "tap": "^18.5.0"
   },
   "type": "module"
 }
